devel/manifests/seccomp-pod.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: egress-allow-google
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 108.177.8.0/21
    - ipBlock:
        cidr: 108.177.96.0/19
    - ipBlock:
        cidr: 130.211.0.0/22
    - ipBlock:
        cidr: 172.217.0.0/19
    - ipBlock:
        cidr: 172.217.128.0/19
    - ipBlock:
        cidr: 172.217.160.0/20
    - ipBlock:
        cidr: 172.217.192.0/19
    - ipBlock:
        cidr: 172.217.32.0/20
    - ipBlock:
        cidr: 173.194.0.0/16
    - ipBlock:
        cidr: 209.85.128.0/17
    - ipBlock:
        cidr: 216.239.32.0/19
    - ipBlock:
        cidr: 216.58.192.0/19
    - ipBlock:
        cidr: 35.190.247.0/24
    - ipBlock:
        cidr: 35.191.0.0/16
    - ipBlock:
        cidr: 64.233.160.0/19
    - ipBlock:
        cidr: 66.102.0.0/20
    - ipBlock:
        cidr: 66.249.80.0/20
    - ipBlock:
        cidr: 72.14.192.0/18
    - ipBlock:
        cidr: 74.125.0.0/16
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: egress-allow-kubernetes-master
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.16/28
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: egress-allow-remote-k8s-master
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 35.202.64.141/32
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: egress-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: ingress-allow-master-address-range
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.0.16/28
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: ingress-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
